:noexport tag for tips and tricks section

--- a/2020-12-29-dissecting-python.org
+++ b/2020-12-29-dissecting-python.org
@@ -705,7 +705,7 @@ tags: [book, template]
   approach for study anything.
 
 
-* Several useful tips and tricks
+* Several useful tips and tricks                                   :noexport:
 
 ** Two pages on the screen
 
