Another bag of useful phrases

--- a/2020-12-29-dissecting-python.org
+++ b/2020-12-29-dissecting-python.org
@@ -161,6 +161,35 @@ tags: [book, template]
 
 ***** It is not a brash endeavor to pivot all industry upsidedown
 
+***** It was more like some kind of instinctual herd behavior,
+      programmed into me
+
+***** Those who defy the odds are especially gritty
+
+***** Grit bore absolutely no relationship to comprehension
+      in material
+
+***** And customarily they have no urge and time to ponder
+      the irony of the situation
+
+***** Let go of your tendency to make snap judgments
+
+***** We elicit the concequences of this tacit agreement
+
+***** Learn programming in its arcane notation by testing its facets
+
+***** The biggest impediment to your
+      success and realizing your potential is not lack of
+      productivity, hard work, or intelligence; it is the way in which
+      we pursue it
+
+***** By clinging to the old formula for studying we are leaving enormous
+      amounts of potential untapped
+
+***** Step by step they muddle themselves in flamboyant definitions
+      and wierd concepts
+
+
 **** Competitors
 
 **** Retrospecive analysis
