Few acid notes about readability

--- a/2020-12-29-dissecting-python.org
+++ b/2020-12-29-dissecting-python.org
@@ -830,23 +830,24 @@ tags: [book, template]
     second string begins with tripled double quotes and a sentence there.
     They are the obligatory attributes if you have intention to do things
     as it should do.
+
     """
 
     import unittest  # <-- import header
 
     """The place below an import section reserved for multi-line comments
     which might be utilized as preamble to your Python program. It is
-    readable only for humans, not compiled ever, and allows to the author
-    write down all stuff necessary to be a foremost.
+    being red only by humans, not compiled ever, and permits author to
+    write down all stuff necessary to be at the foremost place.
 
-    By its purpose all programming languages should allow the reader to
+    By its purpose all programming languages should allow readers to
     perceive what exactly this particular text do in a much explicit
     manner. The real state of things, when programs are habitually
     clogged, requires from a literate reader tons of time and perceverance
     for litter decluttering and a core idea grasp. Noticeable that
-    nowadays most programs demand from reader such proficiency that it
-    made them partially readable for humans and fully comprehended by the
-    handful of true geeks only.
+    nowadays most programs demand from its reader such literacy that it
+    made them actually indecipherable for humans and in most cases
+    extremely knotty even to its author.
 
     Nevertheless, this fact usually omitted by specialists, who spent a
     huge amount of time reading so overcomplicated texts of programs.
@@ -856,7 +857,7 @@ tags: [book, template]
     “It is just lack of experience!”: they say usually. You might object
     by notation that several professionals can't catch the essence out
     from that text because it is poorly written, they answer something
-    like: “It works well enough to be scrutinized much more diligently.”
+    like: “It works well enough to be scrutinized much diligently.”
 
     """
 
