--- a/2020-12-29-dissecting-python.org
+++ b/2020-12-29-dissecting-python.org
@@ -808,7 +808,7 @@ tags: [book, template]
   program and later for all its readers.
 
   Naturally what such cool feature was already established by *Python*
-  and well-known as a /docstring/, the special sort of comments.
+  and well-known as a [[https://www.python.org/dev/peps/pep-0257/][docstrings]], the special sort of comments.
   Multi-line docstrings consist of a /summary line/, followed by a
   blank line, followed by a more elaborate description.
 
