--- a/2020-12-29-dissecting-python.org
+++ b/2020-12-29-dissecting-python.org
@@ -831,14 +831,6 @@ tags: [book, template]
     This is also what you'll see if you call help() on a module or any
     other Python object.
 
-    It might be unnecessary in our case, when we write a simplified
-    version of programs. If the aim is a paragon of clarity it should
-    contain all required lucidity attributes.
-
-    You might notice that /coding definition/ on the first string, the
-    second string begins with tripled double quotes and a sentence there.
-    They are the obligatory attributes if you have intention to do things
-    as it should do.
 
     """
 
@@ -848,6 +840,15 @@ tags: [book, template]
     which might be utilized as preamble to your Python program. It is
     being red only by humans, not compiled ever, and permits author to
     write down all stuff necessary to be at the foremost place.
+
+    It might be unnecessary in our case, when we write a simplified
+    version of programs. But our aim is a paragon of clarity thus it
+    should contain all lucidity's attributes.
+
+    You might notice that /coding definition/ on the first string, the
+    second string begins with tripled double quotes and a sentence there.
+    They are the obligatory attributes if you have intention to do things
+    as it should do.
 
     By its purpose all programming languages should allow readers to
     perceive what exactly this particular text do in a much explicit
