An atavistic header sha-bang

--- a/2020-12-29-dissecting-python.org
+++ b/2020-12-29-dissecting-python.org
@@ -822,6 +822,7 @@ tags: [book, template]
   #+END_QUOTE
 
   #+BEGIN_SRC python :tangle tests/test_02_primal_testing_full_fledged.py
+    #!/usr/bin/python
     # -*- coding: utf-8 -*-
     """A module-level docstring brief single-line description
 
