A couple of useful idioms

--- a/2020-12-29-dissecting-python.org
+++ b/2020-12-29-dissecting-python.org
@@ -189,7 +189,11 @@ tags: [book, template]
 ***** Step by step they muddle themselves in flamboyant definitions
       and wierd concepts
 
+***** The lesser of two evils
+      
+***** Even a perfunctury analysis shows a plethora caveats in these judgements
 
+***** 
 **** Competitors
 
 **** Retrospecive analysis
