--- a/2020-12-29-dissecting-python.org
+++ b/2020-12-29-dissecting-python.org
@@ -347,6 +347,14 @@ tags: [book, template]
 
 
 * Relevant quotes
+
+     #+BEGIN_QUOTE
+    “I can calculate the motion of heavenly bodies but not the madness
+    of people.”
+
+   - *Isaac Newton*
+   #+END_QUOTE
+   -----
     #+BEGIN_QUOTE
     Programs must be written for people to read, and only incidentally
     for machines to execute."
