--- a/2020-12-29-dissecting-python.org
+++ b/2020-12-29-dissecting-python.org
@@ -586,21 +586,22 @@ tags: [book, template]
 
    - *Abraham Maslow*
    #+END_QUOTE
-
    -----
    
    or /cognition inertia/ in writing book about programming. First
    books about programming were written in a plain English and it was
-   ample at that time: there wasn't any programming languages, the set
-   of commands only. Later, when full-fledged programming languages
-   was introduced, authors predictably included wee chunks of
-   programs into the text of books about programming by these
-   languages. It's right. It is much more illustrative and
+   ample at that time: there wasn't any programming languages, the
+   large set of hexadecimal commands only. Later, when full-fledged
+   programming languages was introduced, authors predictably included
+   wee chunks of programs into the text of books about programming by
+   these languages. It's right. It is much more illustrative and
    comprehensible for readers.
 
-   What should be the next step in that direction?
+   When later /unit testing/ was introduced it deemed as a special
+   concept in software development. What if I ask you: “What should be
+   the next step further in that direction?”
 
-   It should be the programs as the textbook, written in particular
+   It should be the /programs as the textbook/, written in particular
    programming language, with plentiful number of tests to examplify
    concepts, ideas, approaches hidden behind the wall of mutual
    understanding between a man and machine.
